Implementada propagacion del token
Implementado POST de /vehiculos

Implementado filtro de autenticación que llama a /validate del core
